--- a/maps-topic-qa/Topics/Region/casee/content-types/essay/cas.essay.1.dita
+++ b/maps-topic-qa/Topics/Region/casee/content-types/essay/cas.essay.1.dita
@@ -14,9 +14,7 @@
      <p>Lecturer, Oxford School of Global and Area Studies, University of Oxford, United Kingdom, and visiting scholar, Carnegie Europe, Brussels, Belgium.</p>
      <p /> 
      <p>test changes When the crisis in Ukraine began with the Russian Federation’s annexation of
-    the Crimean p      eninsul         a in March 2014, international policymakers noted with increasing concern
-    Russia’s growing involvement in Balkan affairs. Russia seemed to be present in every sphere,
-    with an influence that spans from regional diplomacy, to the energy sector, to party politics.
+    the Crimean p      eninsul         a in March 2014, ians from regional diplomacy, to the energy sector, to party politics.
     Its embassy in Bosnia and Herzegovina consistently supported threats by President Milorad Dodik
     of the Bosnian Serb entity, Republika Srpska, to hold a secessionist referendum that would
     jeopardize the Dayton peace accords of 1995. Russia furthermore intensified its rhetoric against
