--- a/maps-topic-qa/Topics/Region/casee/countries/albania/content-types/chronology/al.chron.dita
+++ b/maps-topic-qa/Topics/Region/casee/countries/albania/content-types/chronology/al.chron.dita
@@ -4,7 +4,7 @@
      <alt-heading type="SECTION-LONG-UPPERCASE" usage="casee">Albania</alt-heading>
      <alt-heading type="COUNTRY-SHORT-TITLECASE" usage="casee">Chronology</alt-heading>
      <chron-list>
-          <chron-entry from-date="-0168-01-01" to-date="-0168-12-31">
+          <chron-entry from-date="-016 8-01-01" to-date="-0168-12-31">
                <chron-head>
         168 
         <sc>bce</sc>
