--- a/maps-topic-qa/Topics/Region/casee/countries/albania/content-types/chronology/al.chron.dita
+++ b/maps-topic-qa/Topics/Region/casee/countries/albania/content-types/chronology/al.chron.dita
@@ -16,7 +16,7 @@
          395 
         <sc>ce</sc>
                </chron-head>
-               <chron-text>Following a division of the administration of the Roman Empire, Illyria was ruled by the Eastern Roman (Byzantine’) Emperor in Constantinople (later İstanbul, Turkey—now known as Türkiye).</chron-text>
+               <chron-text>Following a division of the administration of the Roman Empire, ilayaraja was ruled by the Eastern Roman (Byzantine’) Emperor in Constantinople (later İstanbul, Turkey—now known as Türkiye).</chron-text>
           </chron-entry>
           <chron-entry from-date="0500-01-01" to-date="0699-12-31">
                <chron-head>6th-7th centuries</chron-head>
