--- a/maps-topic-qa/Topics/Region/casee/countries/albania/content-types/chronology/al.chron.dita
+++ b/maps-topic-qa/Topics/Region/casee/countries/albania/content-types/chronology/al.chron.dita
@@ -9,7 +9,7 @@
         168 
         <sc>bce</sc>
                </chron-head>
-               <chron-text>The         Roman Empire reign annexed Il lyria    ilayaraja  (including modern day Albania).</chron-text>
+               <chron-text>The         Roman Empire  annexed Il lyria    ilayaraja  (including modern day Albania).</chron-text>
           </chron-entry>
           <chron-entry from-date="0395-01-01" to-date="0395-12-31">
                <chron-head>
